# MVP-ORCA

./: .env.example  CLAUDE.md  README.md  pyproject.toml  setup.sh
app/: config.py  db.py  deps.py  main.py
app/api/: agents.py  approvals.py  auth.py  clients.py  deliverables.py  evidence_items.py  evidence_requests.py  findings.py  methodology.py  notifications.py  projects.py  security.py  workmode.py
app/bot/: commands.py
app/engagementcore/: __init__.py  context.py  objectives.py  state.py
app/frameworks/: dpdp_act.json  isaca.json  iso_27001.json  nist.json  owasp_asvs.json  owasp_wstg.json  ptes.json  tg_baseline.json  vapt.json
app/models/: __init__.py  agent.py  clients.py  delivery.py  engagement.py  evidence.py  methodology.py  notification.py  organization.py  scan.py  scope.py  tasks.py  users.py  workflow.py  workmode.py
app/schemas/: clients.py  deliverables.py  evidence_items.py  gates.py  permissions.py
app/services/: applier.py  audit.py  auth.py  context_resolver.py  jobs.py
app/web/: deps.py  router.py
migrations/versions/: 556d3346f04a_stage21_mfa_fields.py  87b2c02867fc_initial_17_models.py  ae0b9970b289_stage22_notifications.py  d4e5f6a7b8c9_terms_roe_features.py  e4f5a6b7c8d9_schema_align_dbmd.py
pt-orc/correlations/: README.md  correlations-index.md
pt-orc/docs/: README.md  design.md  docs-index.md  funcs.md  ops.md  orientation.md  skill-brief.md
pt-orc/modules/: README.md  modules-index.md
pt-orc/scripts/: 00_pt-orc.sh  01_dns_recon.sh  02_ip_analysis.sh  03_comp_scan.sh  04_tls_scan.sh  05_web_enum.sh  06_wpscan.sh  07_service_verify.sh  08_app_api_review.sh  09_ai_llm_review.sh  12_report_pack.sh  README.md  SHA256SUMS  orc-common-lib.sh  pt-orc.conf  scripts-index.md  targets.txt
pt-orc/templates/: README.md  templates-index.md
ptorc_adapter/: importer.py  schemas.py
scripts/: backup.py  pilot_dpdp.py  pilot_full.py  pilot_vapt.py  restore.py  seed.py
tests/: conftest.py  test_stage0.py  test_stage1.py  test_stage10.py  test_stage11.py  test_stage12.py  test_stage13.py  test_stage14.py  test_stage15.py  test_stage16.py  test_stage17.py  test_stage18.py  test_stage19.py  test_stage2.py  test_stage20.py  test_stage22.py  test_stage23.py  test_stage24.py  test_stage25.py  test_stage26.py  test_stage27.py  test_stage28.py  test_stage29.py  test_stage3.py  test_stage30.py  test_stage4.py  test_stage5.py  test_stage6.py  test_stage7.py  test_stage8.py  test_stage9.py
tg-audit-orchestrator/: .env.example  .gitignore  CONFORMANCE.md  README.md  db.md
tools/: jq
(+245 files in other folders)
