[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-audit-orchestrator"
version = "0.1.0"
description = "TG Audit Orchestrator — compliance and security audit management platform"
requires-python = ">=3.11"
dependencies = [
    # ── Web framework ────────────────────────────────────────────────────────
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "python-multipart==0.0.20",
    "jinja2==3.1.6",
    "aiofiles==24.1.0",
    # ── Database / ORM ───────────────────────────────────────────────────────
    "sqlalchemy==2.0.50",
    "alembic==1.18.4",
    # ── Validation / config ──────────────────────────────────────────────────
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.0.1",
    "itsdangerous==2.2.0",
    # ── Auth ─────────────────────────────────────────────────────────────────
    "passlib[bcrypt]==1.7.4",
    # ── Telegram bot ─────────────────────────────────────────────────────────
    "python-telegram-bot==22.7",
    # ── Evidence — document parsing ──────────────────────────────────────────
    "pdfplumber==0.11.9",
    "pymupdf==1.27.2.3",
    "python-docx==1.1.2",
    "python-pptx==1.0.2",
    "openpyxl==3.1.5",
    "xlrd==2.0.1",
    "extract-msg==0.55.0",
    # ── Evidence — image / OCR ───────────────────────────────────────────────
    "Pillow==12.2.0",
    "pytesseract==0.3.13",
    # ── Evidence — translation / language detection ──────────────────────────
    "deep-translator==1.11.4",
    "langdetect==1.0.9",
    # ── AI — Claude API ──────────────────────────────────────────────────────
    "anthropic==0.105.2",
    # ── HTTP client ──────────────────────────────────────────────────────────
    "httpx==0.28.1",
    # ── Phase 2: Postgres ────────────────────────────────────────────────────
    "psycopg[binary]==3.3.4",
    # ── Phase 2: Background workers ──────────────────────────────────────────
    "rq==2.3.3",
    "rq-scheduler==0.14.0",
    "redis==8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.9.6",
    "fakeredis==2.36.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ptorc_adapter*", "workers*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
